--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h1 {
   border: 1px solid #0e1a3b;
   border-radius: 3px;
   width: 100%;
+  height: 100%;
   grid-column: span 4;
   padding: 5px 10px;
   text-align: right;
